# Pac-Man

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml
application/: main.cpp
application/Camera/: Camera.cpp  Camera.h
application/Game/: Game.cpp  Game.h
application/Resources/: ResourceLoader.cpp  ResourceLoader.h
application/SFMLFactory/: SFMLFactory.cpp  SFMLFactory.h
application/States/: GameOverState.cpp  GameOverState.h  MenuState.cpp  MenuState.h  PausedState.cpp  PausedState.h  PlayingState.cpp  PlayingState.h  State.h  StateManager.cpp  StateManager.h  VictoryState.cpp  VictoryState.h
application/Views/: CoinView.cpp  CoinView.h  EntityView.h  FruitView.cpp  FruitView.h  GhostView.cpp  GhostView.h  PacmanView.cpp  PacmanView.h  WallView.cpp  WallView.h
logic/AbstractFactory/: AbstractFactory.h
logic/Entities/: Coin.cpp  Coin.h  Collectable.cpp  Collectable.h  EntityModel.cpp  EntityModel.h  Fruit.cpp  Fruit.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Wall.cpp  Wall.h
logic/Observer/: Observer.h  Subject.cpp  Subject.h
logic/Score/: Score.cpp  Score.h
logic/Util/: Camera.cpp  Camera.h  Constants.h  Random.cpp  Random.h  Stopwatch.cpp  Stopwatch.h  Structs.h
logic/World/: World.cpp  World.h
